Commit patch by Josh Berry to fix bug 59080. Thanks for the patch!

BUG: 59080


svn path=/branches/KDE/3.5/kdenetwork/kopete/; revision=673118